--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,15 +14,15 @@
         <activity android:name=".view.SeriesCategoryContentActivity"/>
         <activity android:name=".view.UserProfileActivity"/>
         <activity android:name=".view.MainActivity"/>
-        <activity android:name=".ui.login.LoginActivity"/>
         <activity android:name=".view.MovieReadMoreActivity" />
         <activity android:name=".view.MovieActivity" />
         <activity android:name=".view.CategoryContentActivity"/>
+        <activity android:name=".view.SignInActivity"/>
+        <activity android:name=".view.SignUpActivity"/>
+        <activity android:name=".view.LoginActivity"/>
         <activity android:name=".view.SplashActivity">
-
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
