--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,15 +10,15 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.7ART">
         <activity android:name=".view.ProfileActivity"></activity>
-        <activity android:name=".view.SeriesCategoryContentActivity" />
+        <!--        <activity android:name=".view.SeriesCategoryContentActivity" />-->
         <activity android:name=".view.UserProfileActivity" />
         <activity android:name=".view.MainActivity" />
         <activity android:name=".view.MovieReadMoreActivity" />
-        <activity android:name=".view.MovieActivity" />
         <activity android:name=".view.CategoryContentActivity" />
         <activity android:name=".view.SignInActivity" />
-        <activity android:name=".view.SignUpActivity" />
+        <activity android:name=".view.SignUpActivity" />'
         <activity android:name=".view.LoginActivity" />
+        <activity android:name=".view.MovieActivity" />
         <activity android:name=".view.SplashActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -27,5 +27,7 @@
             </intent-filter>
         </activity>
     </application>
+
+    <uses-permission android:name="android.permission.INTERNET" />
 
 </manifest>
