--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,17 +11,17 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.7ART">
-
-        <activity android:name=".view.ProfileActivity" /> <!-- <activity android:name=".view.genres.series.activity.SeriesGenresActivity" /> -->
         <activity android:name=".view.UserProfileActivity" />
         <activity android:name=".view.MainActivity" />
         <activity android:name=".view.MovieReadMoreActivity" />
         <activity android:name=".view.SignInActivity" />
         <activity android:name=".view.SignUpActivity" />
         <activity android:name=".view.LoginActivity" />
-        <activity android:name=".view.genres.movies.activity.MoviesGenresActivity" />
-        <activity android:name=".view.SplashActivity">
-            <intent-filter>
+        <activity android:name=".view.SplashActivity" />
+        <activity android:name=".view.genres.movies.activity.MoviesGenresActivity"/>
+            <activity android:name=".view.ProfileActivity" />
+        <activity android:name=".view.genres.series.activity.SeriesGenresActivity">
+        <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
