--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -18,9 +18,9 @@
         <activity android:name=".view.SignUpActivity" />
         <activity android:name=".view.LoginActivity" />
         <activity android:name=".view.genres.series.activity.SeriesGenresActivity" />
-        <activity android:name=".view.genres.movies.activity.MoviesGenresActivity"/>
+
         <activity android:name=".view.ProfileActivity" />
-        <activity android:name=".view.SplashActivity">
+        <activity android:name=".view.genres.movies.activity.MoviesGenresActivity">
         <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
