Refatoração dos diretórios

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,15 +13,13 @@
         android:theme="@style/Theme.7ART">
 
         <activity android:name=".view.recommendations.movies.activity.MoviesRecommendationsActivity" />
-        <activity android:name=".view.UserProfileActivity" />
-        <activity android:name=".view.MainActivity" />
         <activity android:name=".view.MovieReadMoreActivity" />
-        <activity android:name=".view.SignInActivity" />
-        <activity android:name=".view.SignUpActivity" />
-        <activity android:name=".view.LoginActivity" />
+        <activity android:name=".view.login.activities.SignInActivity" />
+        <activity android:name=".view.login.activities.SignUpActivity" />
+        <activity android:name=".view.login.activities.LoginActivity" />
 
-        <activity android:name=".view.SplashActivity" />
-        <activity android:name=".view.ProfileActivity" />
+        <activity android:name=".view.splashscreen.SplashActivity" />
+        <activity android:name=".view.profile.ProfileActivity" />
         <activity android:name=".view.genres.series.activity.SeriesGenresActivity" />
         <activity android:name=".view.genres.movies.activity.MoviesGenresActivity">
             <intent-filter>
