--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     package="com.br.seventh_art">
 
     <uses-permission android:name="android.permission.INTERNET" />
@@ -12,16 +13,16 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.7ART">
 
-        <activity android:name=".view.recommendations.movies.activity.MoviesRecommendationsActivity" />
+        <activity android:name=".view.recommendations.movies.activity.MoviesRecommendationsActivity"/>
+        <activity android:name=".view.recommendations.series.activity.SeriesRecommendationsActivity"/>
         <activity android:name=".view.MovieReadMoreActivity" />
         <activity android:name=".view.login.activities.SignInActivity" />
         <activity android:name=".view.login.activities.SignUpActivity" />
         <activity android:name=".view.login.activities.LoginActivity" />
-
-        <activity android:name=".view.splashscreen.SplashActivity" />
         <activity android:name=".view.profile.ProfileActivity" />
         <activity android:name=".view.genres.series.activity.SeriesGenresActivity" />
-        <activity android:name=".view.genres.movies.activity.MoviesGenresActivity">
+        <activity android:name=".view.genres.movies.activity.MoviesGenresActivity"/>
+        <activity android:name=".view.splashscreen.SplashActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
