--- a/app/build.gradle
+++ b/app/build.gradle
@@ -56,15 +56,15 @@ dependencies {
     implementation "android.arch.lifecycle:extensions:1.1.1"
     implementation 'com.squareup.okhttp3:okhttp:4.2.2'
     implementation 'com.squareup.okhttp3:logging-interceptor:4.2.2'
+
     implementation platform('com.google.firebase:firebase-bom:27.1.0')
     implementation 'com.google.firebase:firebase-analytics-ktx'
-    implementation 'com.google.android.gms:play-services-auth:19.0.0'
-    implementation 'com.facebook.android:facebook-login:[8.1)'
-
-
 
     //Biblioteca do Picasso
     implementation 'com.squareup.picasso:picasso:2.71828'
+
+    //Dependências do Facebook
+    implementation 'com.facebook.android:facebook-login:8.2.0'
 
     //Dependências do Firebase
     implementation platform('com.google.firebase:firebase-bom:26.7.0')
