--- a/app/build.gradle
+++ b/app/build.gradle
@@ -72,4 +72,11 @@ dependencies {
 
     //Dependência do play services
     implementation 'com.google.android.gms:play-services-auth:19.0.0'
+
+    //Dependência do CarouselRecyclerview
+
+    implementation 'com.github.sparrow007:carouselrecyclerview:1.2.0'
+
+    //Biblioteca do Glide
+    implementation 'com.github.bumptech.glide:glide:4.12.0'
 }
