--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,7 +11,7 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.7ART">
+        android:theme="@style/Theme.7ART.NoActionBar">
 
         <activity android:name=".view.recommendations.movies.activity.MoviesRecommendationsActivity"/>
         <activity android:name=".view.recommendations.series.activity.SeriesRecommendationsActivity"/>
