--- a/app/build.gradle
+++ b/app/build.gradle
@@ -31,6 +31,9 @@ android {
     kotlinOptions {
         jvmTarget = '1.8'
     }
+    viewBinding {
+        enabled = true
+    }
 }
 
 dependencies {
@@ -75,7 +78,7 @@ dependencies {
 
     //Dependência do CarouselRecyclerview
     implementation 'com.github.sparrow007:carouselrecyclerview:1.2.0'
-    
+
     //Biblioteca do Glide
     implementation 'com.github.bumptech.glide:glide:4.12.0'
 }
